--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">SpeakHumanish</string>
+    <string name="questionTitle">Please solve:</string>
+    <string name="question">1+1</string>
+    <string name="answerTitle">Answer:</string>
+    <string name="answer">Please enter the answer</string>
+    <string name="submit">Submit</string>
 </resources>
